# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  args_parser.py  generator.py
gendiff/format/: bool_to_str.py  data_parser.py  plain.py  stylish.py
gendiff/helpers/: convert_data.py  get_format.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff_json.py  url_headers.json  url_ip.json
