[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgeniy Kolpakov <eskolpakov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
